Prevent images from bleeding out of preview container

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -3684,7 +3684,6 @@ ul.tree,
       & > .preview-thumb-container {
         margin: 0 var(--neg-padding);
         height: auto;
-        max-height: 190px;
 
         & + .pane-header {
           border-radius: 0;
@@ -4047,11 +4046,12 @@ ul.tree,
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 100%;
 
     img {
       display: block;
       max-width: 100%;
-      max-height: 100%;
+      max-height: 190px;
     }
   }
 
